--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
         <link rel="stylesheet" href="styles.css"></link>
     </head>
     <body class="disable-selection">
-        <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+        <script src="../src/app.ts"></script>
     </body>
 </html>
